# librefang

./: .secrets.baseline  CHANGELOG.md  Cargo.toml  README.md  justfile  openapi.json
.github/workflows/: mobile-smoke.yml  nix-build.yml  release-desktop.yml  release.yml
crates/librefang-api/src/: channel_bridge.rs  openapi.rs  server.rs  types.rs  validation.rs  ws.rs
crates/librefang-api/tests/: a2a_routes_integration.rs  agent_channels_routes_test.rs  agent_identity_registry_test.rs  agents_capabilities_files_integration.rs  agents_clone_bulk_integration.rs  agents_routes_integration.rs  api_deny_unknown_fields_test.rs  api_integration_test.rs  auth_public_allowlist.rs  channel_remove_test.rs  channel_send_mirror_test.rs  channel_webhooks_test.rs  config_routes_integration.rs  dead_route_audit_test.rs  hands_routes_integration.rs  idempotency_test.rs  (+10 more)
crates/librefang-desktop/: tauri.conf.json
crates/librefang-kernel/: Cargo.toml
crates/librefang-runtime-mcp/: Cargo.toml
crates/librefang-runtime-mcp/src/: lib.rs  trace_context.rs
docs/: package.json  pnpm-lock.yaml
docs/operations/: config-reload.md
i18n/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pl.md  README.uk.md  README.zh.md
sdk/go/: librefang.go
sdk/javascript/: index.js  package.json
sdk/python/: setup.py
sdk/rust/: Cargo.toml
web/: README.md  index.html  package.json  pnpm-lock.yaml
web/public/: install.sh
web/scripts/: audit-locale-completeness.ts
web/src/: i18n.test.ts  i18n.ts  store.ts
xtask/baselines/: openapi.sha256
(+206 files in other folders)
